feat: update deno.json with imports and tasks, add deno.lock, refactor index.ts for environment variable checks

--- a/deno.json
+++ b/deno.json
@@ -2,5 +2,9 @@
   "name": "@divy/mcp-deno-kv",
   "version": "0.1.0",
   "license": "MIT",
-  "exports": "./index.ts"
+  "exports": "./index.ts",
+  "imports": {
+    "@modelcontextprotocol/sdk": "npm:@modelcontextprotocol/sdk@1.8.0",
+    "zod": "npm:zod@3.24.2"
+  }
 }
