--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,5 @@
 {
-  "name": "@joshuayoes/mcp-deno-kv",
+  "name": "@joshuayoes/deno-kv-mcp",
   "version": "1.0.0",
   "license": "MIT",
   "exports": "./index.ts",
