chore: add unstable feature flag for Deno KV in deno.json
- Introduced an "unstable" field with "kv" to indicate the use of experimental features in the Deno KV store.

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "name": "@joshuayoes/deno-kv-mcp",
   "version": "1.0.0",
+  "unstable": ["kv"],
   "license": "MIT",
   "exports": "./index.ts",
   "imports": {
