feat: add nodejs compatibility layer
- Added .gitignore file to exclude node_modules from version control.
- Updated deno.json to include "nodeModulesDir" and added "@deno/kv" as a dependency.
- Enhanced deno.lock with new dependencies and integrity checks for "@deno/kv".
- Refactored index.ts to support both Deno and Node.js environments, improving compatibility.
- Expanded README.md with new sections for available tools and Node.js usage instructions, enhancing clarity for users.

--- a/deno.json
+++ b/deno.json
@@ -4,8 +4,10 @@
   "unstable": ["kv"],
   "license": "MIT",
   "exports": "./index.ts",
+  "nodeModulesDir": "auto",
   "imports": {
     "@modelcontextprotocol/sdk": "npm:@modelcontextprotocol/sdk@1.10.2",
-    "zod": "npm:zod@3.24.3"
+    "zod": "npm:zod@3.24.3",
+    "@deno/kv": "npm:@deno/kv@0.10.0"
   }
 }
